Version 0.14
 Sim: gui_fltk has dials instead of input boxes
 obdfft: Show axes ranges on graph, fix CSV parsing issue
 Logger: Bundle up several seconds of updates into single transactions
 Sim: Option to listen on bluetooth
 Logger: Baudrate guesser
 Logger: Baudrate upgrader
 Move obd comms into separate library
 Sim: Multiple ECU support [attach a generator for each ecu]

Version 0.13 (released 2010-02-27)
 Opensolaris packaging [for jucr]
 Read OBD_CONFIGFILE environment variable for a config file
 Initial add of simple data analysis tool [fourier filter against db columns]
 Logger can redirect stdout/err to a file
 obdsim: Ability to use a real device instead of a pty on unix
 Logger: Add columns to log if tables already existed
 Logger: Create DB with IF NOT EXISTS to reduce warnings
 Logger,Logrepair: Add indexed tripid column to obd and gps tables
 Kml: Use tripids where possible instead of times to key on trips
 Kml: Warn if tripids are missing from obd or gps tables
 Kml: Don't output kml for trips without gps co-ordinates
 Kml: Add trip number to graphs
 Initial add of simple trip comparison tool [mpg, fuel usage]
 Sim: dlopen generator takes a sub-seed
 Logger: Gracefully handle delayed gpsd startup
 Logrepair: Run ANALYZE against log

Version 0.12 (released 2010-01-03)
 ftdipty: Support user-specified device and vendor ids
 Logger: Support gpsd V3 protocol
 Sim: Support ATI, ATL{0,1}
 Sim: Tidy up linefeed handling throughout app

Version 0.11 (released 2009-11-25)
 Logger: Recognise multi-line serial output, break out line parsing
 Logger: Work on reading error codes
 Logger: Always clean up serial port on early exit
 Sim: bugfixes
 Sim: Move to stdlib read/write instead of stdio
 Sim: Simplify output mechanism
 Sim: Use /dev/ptmx if posix_openpt isn't available
 Sim: Optionally attach a screen session
 Sim: Add "Cycle" generator
 Sim: Add longdesc to generators so they can self-document
 Docs: Add manpage for obdsim-dbus